# m5stickplus1.1

./: .gitignore  CMakeLists.txt  KEY_HANDLING_ARCHITECTURE.md  LVGL_BUTTON_INTEGRATION.md  LVGL_CLEANUP_SUMMARY.md  LVGL_COMPLIANCE_ANALYSIS.md  LVGL_DATA_UPDATE_OPTIMIZATION.md  README.md  SAFETY_API_SUMMARY.md  SMART_DATA_CHANGE_DETECTION.md  sdkconfig  test_buzzer.sh
.github/: copilot-instructions.md
docs/: BUZZER_GUIDE.md  ESP_NOW_COMPONENT_GUIDE.md  ESP_NOW_ROLE_CONFIGURATION.md
main/: CMakeLists.txt  axp192.c  axp192.h  button.c  button.h  button_nav.c  button_nav.h  buzzer.c  buzzer.h  esphome_tlv_format.h  espnow_example.h  espnow_example_main.c  espnow_example_main.c.bak  espnow_manager.c  espnow_manager.h  lvgl_button_input.c  lvgl_button_input.h  lvgl_button_test.c  lvgl_button_test.h  lvgl_demo_ui.c  lvgl_demo_ui.h  lvgl_init.c  lvgl_init.h  lvgl_integration_demo.c  lvgl_integration_demo.h  page_manager.c  page_manager.h  page_manager_backup.c  page_manager_espnow.c  page_manager_espnow.h  page_manager_lvgl.c  page_manager_lvgl.h  page_manager_monitor.c  page_manager_monitor.h  power_safety_demo.c  red_led.c  red_led.h  st7789_driver.c  st7789_driver.h  st7789_lcd.c  (+7 more)
